--- a/template.tex
+++ b/template.tex
@@ -43,7 +43,7 @@
 }
 
 \title{Notebook - Maratona de Programação}
-\author{Estomazil? Jesus Baiano Surgiu!}
+\author{Brasil 3 x 1 Sérvia}
 \date{}
 
 \begin{document}
